--- a/imgui.ini
+++ b/imgui.ini
@@ -8169,19 +8169,19 @@ Collapsed=0
 
 [Window][ Hierarchy]
 Pos=0,28
-Size=370,335
+Size=370,467
 Collapsed=0
 DockId=0x00000005,0
 
 [Window][ Scene]
 Pos=372,28
-Size=530,444
+Size=1209,704
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][DockSpaceViewport_11111111]
 Pos=0,28
-Size=1280,692
+Size=1920,964
 Collapsed=0
 
 [Window][Hierarchy]
@@ -8211,14 +8211,13 @@ Size=1005,598
 Collapsed=0
 
 [Window][ Assets]
-Pos=372,474
-Size=530,246
+Pos=372,734
+Size=1209,258
 Collapsed=0
 DockId=0x00000018,0
 
 [Window][ Save Scene##SaveSceneDialog]
-ViewportPos=103,51
-ViewportId=0x6AD6B263
+Pos=103,19
 Size=1133,680
 Collapsed=0
 
@@ -8243,14 +8242,14 @@ Size=671,577
 Collapsed=0
 
 [Window][ Console]
-Pos=372,474
-Size=530,246
+Pos=372,734
+Size=1209,258
 Collapsed=0
 DockId=0x00000018,1
 
 [Window][ Components]
-Pos=0,365
-Size=370,355
+Pos=0,497
+Size=370,495
 Collapsed=0
 DockId=0x00000006,0
 
@@ -8287,8 +8286,8 @@ Size=616,318
 Collapsed=0
 
 [Window][ Inspector]
-Pos=904,28
-Size=376,692
+Pos=1583,28
+Size=337,964
 Collapsed=0
 DockId=0x00000008,0
 
@@ -8416,7 +8415,7 @@ DockId=0x00000015,1
 
 [Window][ Text Editor]
 Pos=372,28
-Size=530,444
+Size=1209,704
 Collapsed=0
 DockId=0x00000013,1
 
@@ -8462,8 +8461,8 @@ Size=898,568
 Collapsed=0
 
 [Window][Details]
-Pos=1620,512
-Size=300,480
+Pos=1583,512
+Size=337,480
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -10424,15 +10423,23 @@ Column 0  Sort=0v
 RefScale=18
 Column 0  Sort=0v
 
+[Table][0x2E4C87A3,4]
+RefScale=18
+Column 0  Sort=0v
+
+[Table][0x7AF4A197,4]
+RefScale=18
+Column 0  Sort=0v
+
 [Docking][Data]
-DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,194 Size=1280,692 Split=X Selected=0x57ACBA5B
-  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1542,697 Split=X
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,60 Size=1920,964 Split=X Selected=0x57ACBA5B
+  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=1581,697 Split=X
     DockNode                ID=0x00000011 Parent=0x00000015 SizeRef=303,720 Selected=0xF784E5DD
     DockNode                ID=0x00000012 Parent=0x00000015 SizeRef=975,720 Split=X
       DockNode              ID=0x00000003 Parent=0x00000012 SizeRef=370,697 Split=Y Selected=0xB1CF606A
         DockNode            ID=0x00000005 Parent=0x00000003 SizeRef=346,467 Selected=0xB1CF606A
         DockNode            ID=0x00000006 Parent=0x00000003 SizeRef=346,495 Selected=0xACD52934
-      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1170,697 Split=X
+      DockNode              ID=0x00000004 Parent=0x00000012 SizeRef=1209,697 Split=X
         DockNode            ID=0x0000000F Parent=0x00000004 SizeRef=304,720 Selected=0xF784E5DD
         DockNode            ID=0x00000010 Parent=0x00000004 SizeRef=974,720 Split=X
           DockNode          ID=0x0000000D Parent=0x00000010 SizeRef=1652,1011 Split=X
@@ -10440,12 +10447,12 @@ DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=320,194 Size=128
               DockNode      ID=0x00000001 Parent=0x0000000B SizeRef=325,988 Selected=0xB1CF606A
               DockNode      ID=0x00000002 Parent=0x0000000B SizeRef=675,988 Split=Y Selected=0x57ACBA5B
                 DockNode    ID=0x00000007 Parent=0x00000002 SizeRef=512,633 Split=Y Selected=0x57ACBA5B
-                  DockNode  ID=0x00000013 Parent=0x00000007 SizeRef=1258,716 CentralNode=1 Selected=0x57ACBA5B
-                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,246 Selected=0x3CB89FC3
+                  DockNode  ID=0x00000013 Parent=0x00000007 SizeRef=1258,704 CentralNode=1 Selected=0x57ACBA5B
+                  DockNode  ID=0x00000018 Parent=0x00000007 SizeRef=1258,258 Selected=0x3CB89FC3
                 DockNode    ID=0x00000009 Parent=0x00000002 SizeRef=512,353 HiddenTabBar=1 Selected=0xB3D94866
             DockNode        ID=0x0000000C Parent=0x0000000D SizeRef=406,1011 Selected=0x563FB158
           DockNode          ID=0x0000000E Parent=0x00000010 SizeRef=266,1011 Selected=0xD44407B5
-  DockNode                  ID=0x00000016 Parent=0x8B93E3BD SizeRef=376,697 Split=Y Selected=0x59EB5E58
+  DockNode                  ID=0x00000016 Parent=0x8B93E3BD SizeRef=337,697 Split=Y Selected=0x59EB5E58
     DockNode                ID=0x00000008 Parent=0x00000016 SizeRef=340,494 Selected=0x59EB5E58
     DockNode                ID=0x0000000A Parent=0x00000016 SizeRef=340,492 Selected=0xFC3EA205
 
